<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="player_name">Player name</string>
    <string name="player_height_weight">%s, %s</string>
    <string name="player_nationality_and_age">Brasileiro\n%s anos</string>
    <string name="technical_title_text">TÉCNICOS</string>
    <string name="mental_title_text">MENTAIS</string>
    <string name="physical_title_text">FÍSICOS</string>
    <string name="text_button_position">Posição</string>
    <string name="hint_duty">Tarefa</string>
    <string name="attribute_default_value">7</string>
    <string name="attribute_heading_text">Cabeceamento</string>
    <string name="attribute_corners_text">Cantos</string>
    <string name="attribute_crossing_text">Cruzamentos</string>
    <string name="attribute_tackling_text">Desarme</string>
    <string name="attribute_finishing_text">Finalização</string>
    <string name="attribute_dribbling_text">Finta</string>
    <string name="attribute_long_throws_text">Lanç. longos</string>
    <string name="attribute_free_kick_tacking_text">Livres</string>
    <string name="attribute_marking_text">Marcação</string>
    <string name="attribute_penalty_text">Marc. Pênaltis</string>
    <string name="attribute_passing_text">Passe</string>
    <string name="attribute_first_touch_text">Primeiro toque</string>
    <string name="attribute_long_shots_text">Remates de longe</string>
    <string name="attribute_technique_text">Técnica</string>
    <string name="attribute_aggression_text">Agressividade</string>
    <string name="attribute_anticipation_text">Antecipação</string>
    <string name="attribute_bravery_text">Bravura</string>
    <string name="attribute_composure_text">Compostura</string>
    <string name="attribute_concentration_text">Concentração</string>
    <string name="attribute_decisions_text">Decisões</string>
    <string name="attribute_determination_text">Determinação</string>
    <string name="attribute_flair_text">Impresivibilidade</string>
    <string name="attribute_work_rate_text">Índice de trabalho</string>
    <string name="attribute_leadership_text">Liderança</string>
    <string name="attribute_positioning_text">Posicionamento</string>
    <string name="attribute_off_the_ball_text">Sem bola</string>
    <string name="attribute_teamwork_text">Trabalho em equipe</string>
    <string name="attribute_vision_text">Visão de jogo</string>
    <string name="attribute_acceleration_text">Aceleração</string>
    <string name="attribute_agility_text">Agilidade</string>
    <string name="attribute_natural_fitness_text">Aptidão física</string>
    <string name="attribute_balance_text">Equilíbrio</string>
    <string name="attribute_strenght_text">Força</string>
    <string name="attribute_jumping_reach_text">Impulsão</string>
    <string name="attribute_stamina_text">Resistência</string>
    <string name="attribute_pace_text">Velocidade</string>
</resources>