<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/attributes_title"
        style="@style/PlayerDetails.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/technical_attributes_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attributes_title">

        <LinearLayout
            android:id="@+id/technical_attributes_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/attribute_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_27"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_one_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_heading_text" />

                <TextView
                    android:id="@+id/attribute_one_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_two_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_corners_text" />

                <TextView
                    android:id="@+id/attribute_two_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_27"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_three_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_crossing_text" />

                <TextView
                    android:id="@+id/attribute_three_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_four_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_tackling_text" />

                <TextView
                    android:id="@+id/attribute_four_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_27"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_five_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_finishing_text" />

                <TextView
                    android:id="@+id/attribute_five_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_six_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_dribbling_text" />

                <TextView
                    android:id="@+id/attribute_six_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_27"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_seven_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_long_throws_text" />

                <TextView
                    android:id="@+id/attribute_seven_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/technical_attributes_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginEnd="1dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/attribute_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_27"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_eight_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_free_kick_tacking_text" />

                <TextView
                    android:id="@+id/attribute_eight_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_nine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_nine_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_marking_text" />

                <TextView
                    android:id="@+id/attribute_nine_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_27"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_ten_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_penalty_text" />

                <TextView
                    android:id="@+id/attribute_ten_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_eleven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_eleven_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_passing_text" />

                <TextView
                    android:id="@+id/attribute_eleven_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_twelve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_27"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_twelve_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_first_touch_text" />

                <TextView
                    android:id="@+id/attribute_twelve_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_thirteen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_thirteen_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_long_shots_text" />

                <TextView
                    android:id="@+id/attribute_thirteen_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/attribute_fourteen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black_27"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="1dp">

                <TextView
                    android:id="@+id/attribute_fourteen_text"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/attribute_technique_text" />

                <TextView
                    android:id="@+id/attribute_fourteen_value"
                    style="@style/PlayerDetails.AttributesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/attribute_default_value"
                    android:textAlignment="textEnd" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>